--- a/index.html
+++ b/index.html
@@ -1,52 +1,50 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640" />
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="PHP Resources : PHP Tutorials" />
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen"/>
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"/>
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Phpresources by ralphaquino</title>
+    <title>PHP Resources</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/ralphaquino/PHPResources">View on GitHub</a>
-    <div class="shell">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Phpresources</h1>
-            <h2>PHP Tutorials</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/ralphaquino/PHPResources">View on GitHub</a>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/ralphaquino/PHPResources/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/ralphaquino/PHPResources/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
+          <h1 id="project_title">PHP Resources</h1>
+          <h2 id="project_tagline">PHP Tutorials</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/ralphaquino/PHPResources/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/ralphaquino/PHPResources/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      <span class="banner-fix"></span>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h1>
+<a name="php-resources" class="anchor" href="#php-resources"><span class="octicon octicon-link"></span></a>PHP Resources</h1>
 
+<p>This site contains online resources for my own PHP tutorials. This serves as a supplementary tool for all of those who are studying PHP for the first time.</p>
 
-      <section id="main_content">
-        <h3>
+<h2>
+<a name="day-1" class="anchor" href="#day-1"><span class="octicon octicon-link"></span></a>Day 1</h2>
+
+<ol>
+<li>Setting up the coding environment</li>
+<li>PHP Coding Standards</li>
+<li>Getting Started with PHP</li>
+<li>Variables and Conditionals</li>
+</ol><h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
@@ -78,21 +76,17 @@ $ git checkout gh-pages
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
+    </div>
 
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/ralphaquino">ralphaquino</a> can be found on <a href="https://github.com/ralphaquino/PHPResources">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">PHP Resources maintained by <a href="https://github.com/ralphaquino">ralphaquino</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
-
     </div>
 
     
+
   </body>
 </html>
