Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,17 +49,55 @@
         <h1>
 <a name="php-resources" class="anchor" href="#php-resources"><span class="octicon octicon-link"></span></a>PHP Resources</h1>
 
-<p>This is an online repository of supplementary tools for my own PHP tutorials.</p>
+<p>This is an online repository of supplementary tools for my own PHP tutorials. The contents of this page are subject to change based on current progress of tutorials.</p>
 
 <h2>
 <a name="day-1" class="anchor" href="#day-1"><span class="octicon octicon-link"></span></a>Day 1</h2>
 
 <ol>
-<li><a href="#">Setting up the coding environment</a></li>
+<li><a href="/Day%201/codingenvironment.md">Setting up the coding environment</a></li>
 <li><a href="#">PHP Coding Standards</a></li>
 <li><a href="#">Getting started with PHP</a></li>
 <li><a href="#">Variables and conditionals</a></li>
-</ol>
+</ol><p><a href="#">Homework #1</a></p>
+
+<h2>
+<a name="day-2" class="anchor" href="#day-2"><span class="octicon octicon-link"></span></a>Day 2</h2>
+
+<ol>
+<li><a href="#">Working with forms</a></li>
+<li><a href="#">Working with arrays</a></li>
+<li><a href="#">Working with functions</a></li>
+<li><a href="#">Connecting to MySQL</a></li>
+</ol><p><a href="#">Homework #2</a></p>
+
+<h2>
+<a name="day-3" class="anchor" href="#day-3"><span class="octicon octicon-link"></span></a>Day 3</h2>
+
+<ol>
+<li><a href="#">Object-oriented PHP</a></li>
+<li><a href="#">Getting started with CodeIgniter</a></li>
+<li><a href="#">Introduction to the MVC framework</a></li>
+<li><a href="#">Setting-up CodeIgniter</a></li>
+</ol><p><a href="#">Homework #3</a></p>
+
+<h2>
+<a name="day-4" class="anchor" href="#day-4"><span class="octicon octicon-link"></span></a>Day 4</h2>
+
+<ol>
+<li><a href="#">What are controllers</a></li>
+<li><a href="#">What are models</a></li>
+<li><a href="#">What are views</a></li>
+</ol><p><a href="#">Homework #4</a></p>
+
+<h2>
+<a name="day-5" class="anchor" href="#day-5"><span class="octicon octicon-link"></span></a>Day 5</h2>
+
+<ol>
+<li><a href="#">Working with helpers</a></li>
+<li><a href="#">Working with libraries</a></li>
+<li><a href="#">Advanced topics</a></li>
+</ol><p><a href="#">Exam</a></p>
       </section>
 
       <footer>
